tests/toy/neg/000256_mutation.toylang
program a = { bool while a do sleep; } .
